test/js/bun/util/__snapshots__/inspect-error.test.js.snap
// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`error.cause 1`] = `
"1 | // @known-failing-on-windows: 1 failing
2 | import { test, expect } from "bun:test";
3 | 
4 | test("error.cause", () => {
5 |   const err = new Error("error 1");
6 |   const err2 = new Error("error 2", { cause: err });
                   ^
error: error 2
      at [dir]/inspect-error.test.js:6:16

1 | // @known-failing-on-windows: 1 failing
2 | import { test, expect } from "bun:test";
3 | 
4 | test("error.cause", () => {
5 |   const err = new Error("error 1");
                  ^
error: error 1
      at [dir]/inspect-error.test.js:5:15
"
`;

exports[`Error 1`] = `
"10 |       .replaceAll("//", "/"),
11 |   ).toMatchSnapshot();
12 | });
13 | 
14 | test("Error", () => {
15 |   const err = new Error("my message");
                   ^
error: my message
      at [dir]/inspect-error.test.js:15:15
"
`;

exports[`BuildMessage 1`] = `
"2 | const duplicateConstDecl = 456;
          ^
error: "duplicateConstDecl" has already been declared
    at [dir]/inspect-error-fixture-bad.js:2:7

1 | const duplicateConstDecl = 123;
          ^
note: "duplicateConstDecl" was originally declared here
   at [dir]/inspect-error-fixture-bad.js:1:7"
`;
